Add: Google Map, Google Places request (for local takeout restaurants)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="map"></div>
 
         <!-- Load Google Map API  -->
-        <script src="https://maps.googleapis.com/maps/api/js?callback=initMap&libraries=places" async></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUjsdD1ThEiL98_mDnT8sCPAu-ED0DeYg&callback=initMap&libraries=places" async></script>
 
         <!-- Load libraries -->
         <script src="js/lib/jquery-1.12.1.js"></script>
