Store Google Places results in observable array, bind to View/HTML.
Results from the Google Places request are converted into Place objects, with observable properties. They are stored in an observable array, which is bound to the #places-list <ul> in the HTML. This automatically updates the View with a list.

--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
     </head>
 
     <body>
+
+        <!-- Places list -->
+        <ul id="places-list" data-bind="foreach: placesList">
+            <li data-bind="text: name"></li>
+        </ul>
+
         <!-- Google map  -->
         <div id="map"></div>
 
-        <!-- Load Google Map API  -->
+        <!-- Load Google Maps API  -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUjsdD1ThEiL98_mDnT8sCPAu-ED0DeYg&callback=initMap&libraries=places" async></script>
 
         <!-- Load libraries -->
