Add map markers

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- Places list -->
         <ul id="places-list" data-bind="foreach: placesList">
-            <li data-bind="text: name"></li>
+            <li class="places-list-item" data-bind="text: name"></li>
         </ul>
 
         <!-- Google map  -->
@@ -33,7 +33,7 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUjsdD1ThEiL98_mDnT8sCPAu-ED0DeYg&callback=initMap&libraries=places" async></script>
 
         <!-- Load libraries -->
-        <script src="js/lib/jquery-1.12.1.js"></script>
+        <!-- <script src="js/lib/jquery-1.12.1.js"></script> -->
         <script src="js/lib/knockout-3.2.0.js"></script>
 
         <!-- Load and run js files -->
