Add "active" place functionality.
The active place, keeps track of which place is currently under investigation by the user. A click listener exists on each place UI element (list items only, map markers not yet supported), that calls a function which changes the clicked UI element's corresponding place to the "active" place. KO logic in the html changes the CSS class of the active UI element.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 
         <!-- Places list -->
         <ul id="places-list" data-bind="foreach: filteredList">
-            <li class="places-list-item" data-bind="text: name"></li>
+            <li class="places-list-item">
+                <span data-bind="text: name"></span>
+                <span data-bind="text: open"></span>
+                <button data-bind="click: $root.setActivePlace"> ACTIVATE </button>
+                <span data-bind="css: {active: $data != $root.activePlace() }"> active?</span>
+            </li>
         </ul>
 
         <!-- Google map  -->
