--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUjsdD1ThEiL98_mDnT8sCPAu-ED0DeYg&callback=initMap&libraries=places" async></script>
 
         <!-- Load libraries -->
-        <!-- <script src="js/lib/jquery-1.12.1.js"></script> -->
+        <script src="js/lib/jquery-1.12.1.js"></script>
         <script src="js/lib/knockout-3.2.0.js"></script>
+        <script src="js/lib/oauth-signature.min.js"></script>
 
         <!-- Load and run js files -->
         <script src="js/app.js"></script>
