--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="shortcut icon" type="images/png" href="images/map-marker-favicon.png">
 
         <!-- Set title -->
-        <title>Neighborhood Map</title>
+        <title>Neighborhood Takeout</title>
 
     </head>
 
