Add: interactive search feature

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,10 @@
         <!-- Places text filter input -->
         <p> Filter results: <input type="text" name="filter-input" data-bind="textInput: filterText"> </p>
 
+        <!-- Location search -->
+        <button id="location-search-button" data-bind="click: locationSearch">Search</button>
+        <input id="location-search-text" type="text" data-bind="value: searchText"></input>
+
         <!-- Places rating filter -->
         <label id="rating-slider-label" data-bind="text: ratingText"></label>
         <input id="rating-slider" type="range" min="1" max="5" step="1" data-bind="value: ratingNumber"></input>
