Update: even more responsification for the sidebar!
Sidebar now closes info windows when its opened, and also closes itself when a list item is selected.

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
                 <ul id="places-list" data-bind="foreach: filteredList">
                     <li class="places-list-item">
                         <span data-bind="text: name"></span>
-                        <button data-bind="click: $root.setActivePlace"> ACTIVATE </button>
+                        <button data-bind="click: function() { $root.setActivePlace($data); $root.closeSidebar(); }"> ACTIVATE </button>
                         <span data-bind="css: {active: $data == $root.activePlace() }"> active?</span>
                     </li>
                 </ul>
