Improve: button view

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         </script>
 
         <!-- Open button. Opens sidebar, and hides itself while sidebar is open -->
-        <button class="openbutton" data-bind="event: {click: openSidebar}, css: {openbutton__hidden: sidebarVisible}">More...</button>
+        <button class="button openbutton" data-bind="event: {click: openSidebar}, css: {openbutton__hidden: sidebarVisible}">List</button>
 
         <!-- New location search -->
         <div class="location" data-bind="css:{location__hidden: sidebarVisible}">
@@ -70,7 +70,7 @@
                 </ul>
 
                 <!-- Close button. Closes sidebar. -->
-                <button class="closebutton" data-bind="event: {click: closeSidebar}">Close</button>
+                <button class="button closebutton" data-bind="event: {click: closeSidebar}">Close</button>
 
             </div>
 
