Improve: infowindow view

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,30 @@
 
                 </div>
 
+
+
+
+
+                <!-- <div class="infowindow">
+
+                    <img class="infowindow-image">
+
+                    <div class="infowindow-details">
+                        <h2>Title</h2>
+                        <h3>Address</h3>
+                        <h3>Phone</h3>
+                        <img src="yelp...">
+                        <span>review count</span>
+                    </div>
+
+                    <div class="infowindow-snippet">snippet</div>
+
+                </div> -->
+
+
+
+
+
                 <!-- Places list -->
                 <ul id="places-list" data-bind="foreach: filteredList">
                     <li class="places-list-item" data-bind="click: function() { $root.setActivePlace($data); $root.closeSidebar(); }, css: {active: $data == $root.activePlace() }">
