Change: small css changes, clean up code

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                     <div class="sidebar-content-filter-rating">
                         <label for="rating-slider-input">Minimum rating:</label>
                         <input id="rating-slider-input" type="range" min="0" max="5" step="0.5" data-bind="value: ratingNumber"></input>
-                        <span id="rating-slider-label" data-bind="text: ratingNumber"></span>
+                        <h4 id="rating-slider-label" data-bind="text: ratingNumber"></h4>
                     </div>
 
                 </div>
