Fix: HTML validation issue

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
         </script>
 
         <!-- Load the page styles -->
-        <link href="css/fonts.css?__inline=true" rel="stylesheet">
+        <link href="css/fonts.css?__inline=true" rel="stylesheet" property='stylesheet'>
 
     </body>
 </html>
